Fix spacing issue in blog post

--- a/wp-content/themes/multunus/sass/custom/_blog_post.scss
+++ b/wp-content/themes/multunus/sass/custom/_blog_post.scss
@@ -1,4 +1,6 @@
 .blog-post {
+    margin-top: 96px;
+
     ul {
         list-style: none;
     }
